[package]
name = "index_alloc"
version = "0.1.1"
edition = "2021"
authors = ["Adrien Degliame"]
description = "A toy static allocator wich can serve as a global_allocator."
repository = "https://github.com/Adi-df/index_alloc/"
license = "MIT"

[[example]]
name = "global_allocator"

[[example]]
name = "boxed_linked_list"

[[example]]
name = "dynamic_dispatch"

[[example]]
name = "rc_graph"
